--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
   <meta name="description" content="Blue Wyvern adalah editor online untuk mengedit file teks pada game atau aplikasi J2ME.">
   <meta name="keywords" content="J2ME, Text Editor, BIN Editor, Blue Wyvern, Game Editing">
   <meta name="author" content="Blue Wyvern">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=UnifrakturCook:wght@700&display=swap" rel="stylesheet">
   <style>
     body {
       margin: 10px;
@@ -22,6 +25,7 @@
     }
     h1, h3 {
       margin: 0;
+      font-family: "UnifrakturCook", cursive;
     }
     .sticky-header {
       color: #0771eb;
@@ -34,6 +38,7 @@
     #description {
       color: #fff;
       margin-bottom: 15px;
+      font-weight: bold;
     }
     #fileNameDisplay {
       color: #777;
@@ -77,6 +82,8 @@
       background-color: #111111;
     }
     .text-index {
+      color: #aaa;
+      font-weight: bold;
       margin-right: 8px;
     }
 
