--- a/index.html
+++ b/index.html
@@ -25,7 +25,6 @@
     }
     h1, h3 {
       margin: 0;
-      font-family: "UnifrakturCook", cursive;
     }
     .sticky-header {
       color: #0771eb;
@@ -34,6 +33,9 @@
       z-index: 10;
       background-color: transparent;
       padding-bottom: 10px;
+    }
+   .sticky-header h1 {
+     font-family: "UnifrakturCook", cursive;
     }
     #description {
       color: #fff;
